Fix: Fixed gradle and errors handle v2